# postgres

./: FLIPSCAN.md  INCREMENTAL_MATVIEW.md  ZHEAP_PHASE2_PLAN.md  ZHEAP_PORT_ANALYSIS.md  ZHEAP_PORT_NOTES.md  ZHEAP_PROGRESS.md  phase7_bench.out  phase7_bench.sql
contrib/: Makefile
contrib/dbblue_admin/: Makefile  dbblue_admin--1.0.sql  dbblue_admin.control
contrib/hypopg-REL1_STABLE/: hypopg.c
contrib/pg_prewarm/: Makefile  autoprewarm.c  db_blue_pinner.c  db_blue_pinner.h  meson.build
share/: postgres.bki
src/backend/access/: Makefile  meson.build
src/backend/access/zheap/: meson.build
src/backend/catalog/: dependency.c  system_views.sql
src/backend/commands/: Makefile  createas.c  dbblue_brin_worker.c  dbcommands.c  matview.c  matview_dirty.c  matview_incr.c  meson.build  tablecmds.c
src/backend/executor/: execMain.c  nodeAgg.c  nodeLimit.c  nodeSort.c
src/backend/nodes/: queryjumblefuncs.c
src/backend/parser/: analyze.c  gram.y
src/backend/postmaster/: Makefile  README.auto_partition  README.auto_partition.md  autopartition.c  bgworker.c  dbblue_auto_tuner.c  dbblue_create_standby.c  dbblue_index_advisor.c  meson.build  postmaster.c
src/backend/utils/cache/: Makefile  dbblue_countcache.c  dbblue_predfingerprint.c  meson.build  plancache.c
src/include/: varatt.h
src/include/access/: rmgrlist.h  tableam.h  toast_compression.h  toast_internals.h  undolog.h  undolog_rmgr.h  undorequest.h
src/include/catalog/: Makefile  catversion.h  meson.build  pg_dbblue_matview.h
src/include/commands/: dbblue_brin_worker.h  matview.h  matview_dirty.h  (+2 more)
(+68 files in other folders)
