# Copyright (c) 2022-2026, PostgreSQL Global Development Group

backend_sources += files(
  'prunetpd.c',
  'prunezheap.c',
  'rewritezheap.c',
  'tpd.c',
  'tpdxlog.c',
  'zheapam.c',
  'zheapam_handler.c',
  'zheapam_visibility.c',
  'zheapamxlog.c',
  'zhio.c',
  'zmultilocker.c',
  'zpage.c',
  'zscan.c',
  'ztuple.c',
  'ztuptoaster.c',
  'zundo.c',
  'zvacuumlazy.c',
)
