# Copyright (c) 2022-2026, PostgreSQL Global Development Group

backend_sources += files(
  'attoptcache.c',
  'catcache.c',
  'dbblue_countcache.c',
  'dbblue_predfingerprint.c',
  'evtcache.c',
  'funccache.c',
  'inval.c',
  'lsyscache.c',
  'partcache.c',
  'plancache.c',
  'relcache.c',
  'relfilenumbermap.c',
  'relmapper.c',
  'spccache.c',
  'syscache.c',
  'ts_cache.c',
  'typcache.c',
)
